--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,7 @@
   "keywords": ["caret"],
   "authors": [{
     "name": "Gideon Sireling",
-    "homepage": "http://www.accursoft.com/gideon-sireling.html"
+    "homepage": "https://www.linkedin.com/in/gideonsireling"
   }],
   "homepage": "https://bitbucket.org/accursoft/caret",
   "dependencies": {
