--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@accursoft/jquery-caret",
-  "version": "1.3.5",
+  "version": "1.3.6",
   "description": "Manipulate the caret's position in a text box or content-editable element",
   "browser": "jquery.caret.js",
   "author": {
@@ -14,5 +14,9 @@
   },
   "files": [
     "jquery.caret.js"
+  ],
+  "keywords": [
+    "jquery-plugin",
+    "caret"
   ]
 }
