update author url

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "browser": "jquery.caret.js",
   "author": {
     "name": "Gideon Sireling",
-    "url": "https://www.linkedin.com/in/gideonsireling"
+    "url": "https://www.linkedin.com/in/gideon-sireling"
   },
   "license": "BSD-3-Clause",
   "repository": {
